--- a/csaw_function_CLEAN_ET.Rmd
+++ b/csaw_function_CLEAN_ET.Rmd
@@ -30,14 +30,14 @@ library(dplyr)
 ```{r, read in metadata & regions of interest}
 #reading in metdata
 meta <- read.csv("../csaw_samples_files/cac_csaw_FINAL.csv")
-metaQC <- read.csv("../csaw_samples_files/cac_csaw_QC_TEST.csv")
+#metaQC <- read.csv("../csaw_samples_files/cac_csaw_QC_TEST.csv")
 
 #fix path (if necessary, should only be if you're in wrong directory)
 meta <- meta %>%
   mutate(bamReads = paste0("../", bamReads))
 
-metaQC <- metaQC %>%
-  mutate(bamReads = paste0("../", bamReads))
+#metaQC <- metaQC %>%
+  #mutate(bamReads = paste0("../", bamReads))
 
 #meta <- meta %>%
 #mutate(Peaks = paste0("../", Peaks))
@@ -3645,7 +3645,7 @@ K27lost_nocode = subset(K27lost, ! K27lost$gene_id %in% rownames(allDataTPM))
 
 #only K36 genes
 K27lostK36enriched = H3K36me3_Results_K27promTSS_vInput %>%
-  filter(if_any(all_of(c(6, 9, 12, 15, 18, 21)), ~ coalesce(.x > 0, FALSE)))
+  filter(if_any(all_of(c(6, 9, 12, 15, 18, 24)), ~ coalesce(.x > 0, FALSE)))
 K27lostK36enrichedvWT = subset(H3K36me3_Results_K27promTSS_vWT, H3K36me3_Results_K27promTSS_vWT$gene_id %in% K27lostK36enriched$gene_id)
 
 K36lost = subset(K27lostK36enrichedvWT, K27lostK36enrichedvWT$logFC_cac1 < -0.75 | K27lostK36enrichedvWT$logFC_cac2 < -0.75)
@@ -3656,7 +3656,7 @@ K36lost_double_only = subset(K27lostK36enrichedvWT, K27lostK36enrichedvWT$logFC_
 
 K36_Retain_double = subset(K27lostK36enrichedvWT, ! K27lostK36enrichedvWT$gene_id %in% K36lost$gene_id & ! K27lostK36enrichedvWT$gene_id %in% K36lost_double_only$gene_id)
 
-#K36lost_CAF_ALL = subset(H3K36me3_Results_allgenes_vWT, H3K36me3_Results_allgenes_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_allgenes_vWT$logFC_cac2 < -0.75)
+K36lost_CAF_ALL = subset(H3K36me3_Results_allgenes_vWT, H3K36me3_Results_allgenes_vWT$logFC_cac1 < -0.75 | H3K36me3_Results_allgenes_vWT$logFC_cac2 < -0.75)
 K36lost_CAF_nonK27 = subset(K36lost_CAF_ALL, ! K36lost_CAF_ALL$gene_id %in% K36lost$gene_id)
 
 #K36lost = subset(K36lost, K36lost$FDR_cac1 < 0.05 | K36lost$FDR_cac2 < 0.05)
